Fix URLs barre laterale base_dashboard - Correction URLs incorrectes dans sidebar - utilisateurs:liste_utilisateurs au lieu de utilisateurs:liste - paiements:retraits:retrait_list au lieu de liste_retraits - paiements:liste_recapitulatifs au lieu de recapitulatifs:liste_recapitulatifs - Navigation fonctionnelle partout

--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -597,7 +597,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="{% url 'utilisateurs:liste' %}" class="menu-link">
+                            <a href="{% url 'utilisateurs:liste_utilisateurs' %}" class="menu-link">
                                 <i class="bi bi-people"></i>
                                 <span>Utilisateurs</span>
                             </a>
@@ -609,13 +609,13 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="{% url 'paiements:retraits:liste_retraits' %}" class="menu-link">
+                            <a href="{% url 'paiements:retraits:retrait_list' %}" class="menu-link">
                                 <i class="bi bi-arrow-up-circle"></i>
                                 <span>Retraits</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="{% url 'paiements:recapitulatifs:liste_recapitulatifs' %}" class="menu-link">
+                            <a href="{% url 'paiements:liste_recapitulatifs' %}" class="menu-link">
                                 <i class="bi bi-graph-up"></i>
                                 <span>Récapitulatifs</span>
                             </a>
