--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -609,7 +609,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="{% url 'paiements:retraits:retrait_list' %}" class="menu-link">
+                            <a href="{% url 'paiements:retraits_liste' %}" class="menu-link">
                                 <i class="bi bi-arrow-up-circle"></i>
                                 <span>Retraits</span>
                             </a>
